# babankprod

./: .bazelrc  .eslintrc.json  .gitattributes  .gitignore  .golangci.yml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  babankprod.md  cloudbuild.yaml  go.mod  package-lock.json  package.json  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
apps/api/: BUILD.bazel  Dockerfile
apps/api/cmd/api/: BUILD.bazel  main.go  main_test.go
apps/api/pkg/: .gitkeep
apps/web/: BUILD.bazel  angular.json  package-lock.json  package.json  tsconfig.json
apps/web/src/app/: app.component.html  app.component.ts
apps/web/src/environments/: environment.prod.ts  environment.staging.ts
tools/: slack-notifier-success.yaml  slack-notifier.yaml
tools/bazel/: ng_component.bzl
