module(
    name = "babank",
    version = "1.0.0",
)

bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.41.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.0")
use_repo(go_sdk, "go_toolchains")
register_toolchains("@go_toolchains//:all")
